# minisolver

./: README.md  minisolver.cabal  stack.yaml
src/: CHR.hs  Canonicalise.hs  Constraint.hs  Context.hs  Flatten.hs  GHCTest  GHCTest.hi  GHCTest.hs  Inerts.hs  Inference.hs  Interact.hs  Main.hs  MatchTyFam.hs  React.hs  Substitution.hs  Test.hs  Tests.hs  Type.hs  trace.txt
