name:                minisolver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/minisolver#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable minisolver
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor,
                       DeriveFoldable,
                       DeriveTraversable,
                       PatternSynonyms,
                       LambdaCase,
                       TypeFamilies,
                       TemplateHaskell,
                       PartialTypeSignatures,
                       FlexibleContexts,
                       TypeFamilies,
                       TupleSections,
                       TypeSynonymInstances,
                       MultiParamTypeClasses,
                       FlexibleInstances,
                       FunctionalDependencies,
                       ScopedTypeVariables
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       data-fix,
                       containers,
                       lens,
                       QuickCheck,
                       splitmix,
                       deepseq